--- a/src/Main/Resources/rootlayout.fxml
+++ b/src/Main/Resources/rootlayout.fxml
@@ -1,18 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.collections.FXCollections?>
-<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
-
-<BorderPane xmlns="http://javafx.com/javafx/8.0.121"
-            xmlns:fx="http://javafx.com/fxml/1"
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import java.lang.String?>
+<BorderPane xmlns:fx="http://javafx.com/fxml/1"
+            xmlns="http://javafx.com/javafx/8.0.121"
             fx:controller="com.notloki.aas_label.Controller">
     <top>
         <GridPane alignment="CENTER" vgap="10">
@@ -22,57 +16,57 @@
     <center>
         <GridPane fx:id="steelDimParent" hgap="20" vgap="10">
 
-            <Label text="Feet" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <Label text="Inches" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-            <Label text="Qty" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+            <Label text="Feet" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+            <Label text="Inches" GridPane.columnIndex="2" GridPane.rowIndex="1"/>
+            <Label text="Qty" GridPane.columnIndex="3" GridPane.rowIndex="1"/>
 
-            <TextField fx:id="ft1" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <TextField fx:id="in1" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-            <TextField fx:id="qty1" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+            <TextField fx:id="ft1" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
+            <TextField fx:id="in1" GridPane.columnIndex="2" GridPane.rowIndex="2"/>
+            <TextField fx:id="qty1" GridPane.columnIndex="3" GridPane.rowIndex="2"/>
 
-            <TextField fx:id="ft2" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <TextField fx:id="in2" GridPane.columnIndex="2" GridPane.rowIndex="3" />
-            <TextField fx:id="qty2" GridPane.columnIndex="3" GridPane.rowIndex="3" />
+            <TextField fx:id="ft2" GridPane.columnIndex="1" GridPane.rowIndex="3"/>
+            <TextField fx:id="in2" GridPane.columnIndex="2" GridPane.rowIndex="3"/>
+            <TextField fx:id="qty2" GridPane.columnIndex="3" GridPane.rowIndex="3"/>
 
-            <TextField fx:id="ft3" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-            <TextField fx:id="in3" GridPane.columnIndex="2" GridPane.rowIndex="4" />
-            <TextField fx:id="qty3" GridPane.columnIndex="3" GridPane.rowIndex="4" />
+            <TextField fx:id="ft3" GridPane.columnIndex="1" GridPane.rowIndex="4"/>
+            <TextField fx:id="in3" GridPane.columnIndex="2" GridPane.rowIndex="4"/>
+            <TextField fx:id="qty3" GridPane.columnIndex="3" GridPane.rowIndex="4"/>
 
-            <TextField fx:id="ft4" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-            <TextField fx:id="in4" GridPane.columnIndex="2" GridPane.rowIndex="5" />
-            <TextField fx:id="qty4" GridPane.columnIndex="3" GridPane.rowIndex="5" />
+            <TextField fx:id="ft4" GridPane.columnIndex="1" GridPane.rowIndex="5"/>
+            <TextField fx:id="in4" GridPane.columnIndex="2" GridPane.rowIndex="5"/>
+            <TextField fx:id="qty4" GridPane.columnIndex="3" GridPane.rowIndex="5"/>
 
-            <TextField fx:id="ft5" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-            <TextField fx:id="in5" GridPane.columnIndex="2" GridPane.rowIndex="6" />
-            <TextField fx:id="qty5" GridPane.columnIndex="3" GridPane.rowIndex="6" />
+            <TextField fx:id="ft5" GridPane.columnIndex="1" GridPane.rowIndex="6"/>
+            <TextField fx:id="in5" GridPane.columnIndex="2" GridPane.rowIndex="6"/>
+            <TextField fx:id="qty5" GridPane.columnIndex="3" GridPane.rowIndex="6"/>
 
-            <TextField fx:id="ft6" GridPane.columnIndex="1" GridPane.rowIndex="7" />
-            <TextField fx:id="in6" GridPane.columnIndex="2" GridPane.rowIndex="7" />
-            <TextField fx:id="qty6" GridPane.columnIndex="3" GridPane.rowIndex="7" />
+            <TextField fx:id="ft6" GridPane.columnIndex="1" GridPane.rowIndex="7"/>
+            <TextField fx:id="in6" GridPane.columnIndex="2" GridPane.rowIndex="7"/>
+            <TextField fx:id="qty6" GridPane.columnIndex="3" GridPane.rowIndex="7"/>
 
-            <TextField fx:id="ft7" GridPane.columnIndex="1" GridPane.rowIndex="8" />
-            <TextField fx:id="in7" GridPane.columnIndex="2" GridPane.rowIndex="8" />
-            <TextField fx:id="qty7" GridPane.columnIndex="3" GridPane.rowIndex="8" />
+            <TextField fx:id="ft7" GridPane.columnIndex="1" GridPane.rowIndex="8"/>
+            <TextField fx:id="in7" GridPane.columnIndex="2" GridPane.rowIndex="8"/>
+            <TextField fx:id="qty7" GridPane.columnIndex="3" GridPane.rowIndex="8"/>
 
-            <TextField fx:id="ft8" GridPane.columnIndex="1" GridPane.rowIndex="9" />
-            <TextField fx:id="in8" GridPane.columnIndex="2" GridPane.rowIndex="9" />
-            <TextField fx:id="qty8" GridPane.columnIndex="3" GridPane.rowIndex="9" />
+            <TextField fx:id="ft8" GridPane.columnIndex="1" GridPane.rowIndex="9"/>
+            <TextField fx:id="in8" GridPane.columnIndex="2" GridPane.rowIndex="9"/>
+            <TextField fx:id="qty8" GridPane.columnIndex="3" GridPane.rowIndex="9"/>
 
-            <TextField fx:id="ft9" GridPane.columnIndex="1" GridPane.rowIndex="10" />
-            <TextField fx:id="in9" GridPane.columnIndex="2" GridPane.rowIndex="10" />
-            <TextField fx:id="qty9" GridPane.columnIndex="3" GridPane.rowIndex="10" />
+            <TextField fx:id="ft9" GridPane.columnIndex="1" GridPane.rowIndex="10"/>
+            <TextField fx:id="in9" GridPane.columnIndex="2" GridPane.rowIndex="10"/>
+            <TextField fx:id="qty9" GridPane.columnIndex="3" GridPane.rowIndex="10"/>
 
-            <TextField fx:id="ft10" GridPane.columnIndex="1" GridPane.rowIndex="11" />
-            <TextField fx:id="in10" GridPane.columnIndex="2" GridPane.rowIndex="11" />
-            <TextField fx:id="qty10" GridPane.columnIndex="3" GridPane.rowIndex="11" />
+            <TextField fx:id="ft10" GridPane.columnIndex="1" GridPane.rowIndex="11"/>
+            <TextField fx:id="in10" GridPane.columnIndex="2" GridPane.rowIndex="11"/>
+            <TextField fx:id="qty10" GridPane.columnIndex="3" GridPane.rowIndex="11"/>
 
-            <TextField fx:id="ft11" GridPane.columnIndex="1" GridPane.rowIndex="12" />
-            <TextField fx:id="in11" GridPane.columnIndex="2" GridPane.rowIndex="12" />
-            <TextField fx:id="qty11" GridPane.columnIndex="3" GridPane.rowIndex="12" />
+            <TextField fx:id="ft11" GridPane.columnIndex="1" GridPane.rowIndex="12"/>
+            <TextField fx:id="in11" GridPane.columnIndex="2" GridPane.rowIndex="12"/>
+            <TextField fx:id="qty11" GridPane.columnIndex="3" GridPane.rowIndex="12"/>
 
-            <TextField fx:id="ft12" GridPane.columnIndex="1" GridPane.rowIndex="13" />
-            <TextField fx:id="in12" GridPane.columnIndex="2" GridPane.rowIndex="13" />
-            <TextField fx:id="qty12" GridPane.columnIndex="3" GridPane.rowIndex="13" />
+            <TextField fx:id="ft12" GridPane.columnIndex="1" GridPane.rowIndex="13"/>
+            <TextField fx:id="in12" GridPane.columnIndex="2" GridPane.rowIndex="13"/>
+            <TextField fx:id="qty12" GridPane.columnIndex="3" GridPane.rowIndex="13"/>
         </GridPane>
     </center>
     <bottom>
@@ -80,11 +74,12 @@
             <padding>
                 <Insets top="10" bottom="10" right="10" left="10"/>
             </padding>
-            <Label text="Balance Point" />
-            <TextField fx:id="bp" editable="false" />
-            <Button fx:id="processButton" onAction="#process" prefWidth="85" text="Process" />
-            <Button fx:id="printButton" onAction="#print" prefWidth="85" text="Print" />
-            <Button fx:id="quitButton" onAction="#quit" prefWidth="85" text="Quit" />
+            <Label text="Balance Point"/>
+            <TextField fx:id="bp" editable="false"/>
+            <Button fx:id="processButton" onAction="#process" prefWidth="85" text="Process"/>
+            <Button fx:id="printButton" onAction="#print" prefWidth="85" text="Print"/>
+            <Button fx:id="quitButton" onAction="#quit" prefWidth="85" text="Quit"/>
+            <!--<Button fx:id="fillForm" onAction="#fillFields" prefWidth="85" text="Fill Fields"/>-->
         </HBox>
     </bottom>
     <right>
@@ -98,11 +93,12 @@
             <TextField fx:id="cName" GridPane.columnIndex="2" GridPane.rowIndex="7"/>
             <Label text="Job Name" GridPane.columnIndex="2" GridPane.rowIndex="8"/>
             <TextField fx:id="jName" GridPane.columnIndex="2" GridPane.rowIndex="9"/>
-            <ComboBox fx:id="loc" layoutX="15.0" layoutY="35.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="11" promptText="Choose Location" >
+            <ComboBox fx:id="loc" layoutX="15.0" layoutY="35.0" prefWidth="200.0" GridPane.columnIndex="2"
+                      GridPane.rowIndex="11" promptText="Choose Location">
                 <items>
                     <FXCollections fx:factory="observableArrayList">
-                        <String fx:value="Tomah" />
-                        <String fx:value="Sparta" />
+                        <String fx:value="Tomah"/>
+                        <String fx:value="Sparta"/>
                         <String fx:value="Richland Center"/>
                     </FXCollections>
                 </items>
